# phantom

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  go.mod  go.sum  test.http
cmd/: ingestion.go
cmd/benchmark/: main.go
pkg/aggregation/: aggregator.go  aggregator_test.go
pkg/ingestion/: binance_fetcher.go  binance_fetcher_test.go  deduper.go  deduper_test.go  edgar_fetcher.go  edgar_fetcher_test.go  fetcher.go  fetcher_test.go  integration_test.go  interfaces.go  pipeline.go  pipeline_test.go  store.go  store_test.go  validation_survivorship_test.go  yahoo_finance_fetcher.go  yahoo_finance_fetcher_test.go
pkg/shared/: model.go  model_test.go
pkg/signalmatrix/: event_lookup.go  halving_seed.go  halving_seed_test.go  mem_event_lookup.go  mem_event_lookup_test.go  rust_bridge.go  rust_bridge_integration_test.go  rust_bridge_test.go  slice3_e2e_test.go  slice4_e2e_test.go  validation_bernanke_kuttner_test.go  validation_bw1985_test.go  validation_lookahead_test.go  wikipedia_event_lookup.go  wikipedia_event_lookup_test.go  window_builder.go  window_builder_impl.go  window_builder_impl_test.go
pkg/strategy/: deflated_sharpe.go  deflated_sharpe_test.go  metrics.go  metrics_test.go  purged_kfold.go  purged_kfold_test.go  sim.go  sim_test.go  slice6_e2e_test.go  slice7_e2e_test.go
proto/: compute.proto
rust/backtesting/: Cargo.toml
rust/compute_server/: Cargo.toml  build.rs
rust/compute_server/src/: main.rs
rust/graphic_processor/: Cargo.toml
rust/shape_matching/: Cargo.toml  lib.rs
scripts/: local.sh
(+3 files in other folders)
