[package]
name = "compute_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compute_server"
path = "src/main.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
graphic_processor = { path = "../graphic_processor" }
backtesting = { path = "../backtesting" }

[build-dependencies]
tonic-build = "0.12"
